# Capstone-instagram_clone

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml
auth_app/: forms.py  urls.py  views.py
auth_app/templates/auth_app/: login.html
comment_app/: admin.py  forms.py  models.py  views.py
comment_app/migrations/: 0001_initial.py  0002_auto_20210408_1905.py  0002_auto_20210409_2314.py  0002_auto_20210419_0236.py  0002_comment_owner.py
home_feed_app/: apps.py  forms.py  models.py  urls.py  views.py
instaUser_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
instaUser_app/migrations/: 0001_initial.py  0002_auto_20210408_1920.py  0002_auto_20210418_1645.py  0002_auto_20210419_1431.py  0002_profile_likes.py  0003_profile_likes.py
instagram_clone_project/: asgi.py  settings.py  urls.py  wsgi.py
post_app/: admin.py  forms.py  models.py  urls.py  views.py
post_app/migrations/: 0001_initial.py  0002_auto_20210409_0333.py  0002_auto_20210409_1746.py  0002_auto_20210414_0016.py  0002_auto_20210414_1721.py  0003_merge_20210412_1758.py  0003_merge_20210412_1807.py  0004_auto_20210413_1456.py  0004_merge_20210414_1850.py  0005_auto_20210417_0829.py  0005_remove_imagemodel_likes.py
static/css/: style.css
templates/: 404.html  500.html  base.html  edit_comment.html  form.html  home_feed.html  login.html  nav.html  navbar.html  photo_detail.html  post.html  post_detail.html  profile.html  profileform.html
